[project]
name = "fashion-mnist-diffusion"
version = "0.1.0"
description = "Code base for a generative diffusion model generating fashion mnist images."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.0",
    "ipykernel>=6.29.5",
    "jax>=0.5.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyqt6>=6.9.1",
    "scikit-learn>=1.6.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]
